Implement breakpoint_after, breakpoint_before to step entrypoint
breakpoint_on_failure runs at the end of a step, this
commit adds a manual breakpoint -breakpoint_after to run after the step ends whether it
fails or not. The checks for this have been added in the same place as breakpoint on failure

breakpoint_before sets a breakpoint before the entrypointer runs the command
